[package]
name = "smoosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive", "cargo"] }
itertools = "0.10.5"
wad = { version = "0.1.0", path = "../wad" }
